--- a/.github/workflows/audit-rust.yml
+++ b/.github/workflows/audit-rust.yml
@@ -30,5 +30,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: actions-rs/audit-check@v1
+        working-directory: ./src-tauri
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
