--- a/.github/workflows/audit-rust.yml
+++ b/.github/workflows/audit-rust.yml
@@ -26,10 +26,12 @@ concurrency:
 jobs:
   audit-rust:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src-tauri
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions-rs/audit-check@v1
-        working-directory: ./src-tauri
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
