--- a/.github/workflows/lint-rust.yml
+++ b/.github/workflows/lint-rust.yml
@@ -23,6 +23,9 @@ jobs:
     runs-on: macos-latest
     strategy:
       fail-fast: false
+    defaults:
+      run:
+        working-directory: ./src-tauri
 
     steps:
       - uses: actions/checkout@v3
@@ -41,14 +44,12 @@ jobs:
         run: |
           mkdir elk/.output/public
       - uses: actions-rs/clippy-check@v1
-        working-directory: ./src-tauri
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --manifest-path=Cargo.toml --all-targets --all-features -- -D warnings
           name: clippy
 
       - uses: actions-rs/cargo@v1
-        working-directory: ./src-tauri
         with:
           command: fmt
           args: --manifest-path=Cargo.toml --all -- --check
