--- a/.github/workflows/lint-rust.yml
+++ b/.github/workflows/lint-rust.yml
@@ -5,13 +5,13 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/clippy.yml'
+      - '.github/workflows/lint-rust.yml'
       - 'src-tauri/**'
   pull_request:
     branches:
       - main
     paths:
-      - '.github/workflows/clippy.yml'
+      - '.github/workflows/lint-rust.yml'
       - 'src-tauri/**'
 
 concurrency:
