--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = [] }
+tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev",  features = ["colored"] }
+log = "0.4.17"
+env_logger = "0.10.0"
 
 [features]
 # by default Tauri runs in production mode
