--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,8 @@ jobs:
             rust_target: x86_64-pc-windows-msvc
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
 
       - name: 'Setup Rust'
         uses: actions-rs/toolchain@v1
