--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
             arch: x86_64
             rust_target: x86_64-pc-windows-msvc
     steps:
+      - uses: actions/checkout@v3
       - name: Set key for private elk repo
         run: |
           eval `ssh-agent -s`
