--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = [] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev",  features = ["colored"] }
+tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev" }
 log = "0.4.17"
 env_logger = "0.10.0"
 
