ci: disable build schedule

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 */2 * 1-5"
+  # schedule:
+  #   - cron: "0 0 */2 * 1-5"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
