--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,14 +85,14 @@ jobs:
       - name: Install dependencies
         run: cd elk && pnpm install --force
 
-      # - name: create apple private key file
-      #   if: "matrix.config.os == 'macos-latest'"
-      #   run: |
-      #     mkdir ./desktop/app/private_keys
-      #     echo "$APPLE_API_PRIVKEY" > ./desktop/app/private_keys/AuthKey_$APPLE_API_KEY.p8
-      #   env:
-      #     APPLE_API_PRIVKEY: '${{ secrets.APPLE_API_PRIVKEY }}'
-      #     APPLE_API_KEY: '${{ secrets.APPLE_API_KEY }}'
+      - name: create apple private key file
+        if: "matrix.config.os == 'macos-latest'"
+        run: |
+          mkdir ./desktop/app/private_keys
+          echo "$APPLE_API_PRIVKEY" > ./desktop/app/private_keys/AuthKey_$APPLE_API_KEY.p8
+        env:
+          APPLE_API_PRIVKEY: '${{ secrets.APPLE_API_PRIVKEY }}'
+          APPLE_API_KEY: '${{ secrets.APPLE_API_KEY }}'
 
       # - name: Set version in Cargo.toml
       #   run:
