ci: update artifact paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,7 +119,7 @@ jobs:
           # TAURI_PRIVATE_KEY: '${{ secrets.TAURI_PRIVATE_KEY }}'
         with:
           target: ${{ matrix.config.rust_target }}
-          args: --verbose
+          # args: --verbose
 
       - uses: actions/upload-artifact@v3
         with:
@@ -148,8 +148,8 @@ jobs:
 
       - name: Rename .app artifacts
         run: |
-          mv "./artifacts/x86_64/macos/Elk.app.tar.gz" "./artifacts/x86_64/macos/Elk_${{ needs.get-version.outputs.version }}_x86.app.tar.gz"
-          mv "./artifacts/aarch64/macos/Elk.app.tar.gz" "./artifacts/aarch64/macos/Elk_${{ needs.get-version.outputs.version }}_aarch64.app.tar.gz"
+          mv "./artifacts/x86_64/Elk.app.tar.gz" "./artifacts/x86_64/Elk_${{ needs.get-version.outputs.version }}_x86.app.tar.gz"
+          mv "./artifacts/aarch64/Elk.app.tar.gz" "./artifacts/aarch64/Elk_${{ needs.get-version.outputs.version }}_aarch64.app.tar.gz"
       - name: "create release"
         uses: softprops/action-gh-release@master
         env:
