--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,12 +15,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-alpha.0", features = [] }
+tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-alpha.2", features = [] }
+tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = [] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "next",  features = ["colored"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "next" }
 log = "0.4.17"
