--- a/src-tauri/.cargo/config.toml
+++ b/src-tauri/.cargo/config.toml
@@ -1,4 +1,41 @@
 [build]
 target = 'aarch64-apple-darwin'
+[target.aarch64-linux-android]
+linker = '/Users/jonaskruckenberg/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android24-clang'
+rustflags = [
+    '-L',
+    '/Users/jonaskruckenberg/Documents/GitHub/elk-native/src-tauri/.cargo',
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
 
-[target]
+[target.armv7-linux-androideabi]
+linker = '/Users/jonaskruckenberg/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi24-clang'
+rustflags = [
+    '-L',
+    '/Users/jonaskruckenberg/Documents/GitHub/elk-native/src-tauri/.cargo',
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
+
+[target.i686-linux-android]
+linker = '/Users/jonaskruckenberg/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android24-clang'
+rustflags = [
+    '-L',
+    '/Users/jonaskruckenberg/Documents/GitHub/elk-native/src-tauri/.cargo',
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
+
+[target.x86_64-linux-android]
+linker = '/Users/jonaskruckenberg/Library/Android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android24-clang'
+rustflags = [
+    '-L',
+    '/Users/jonaskruckenberg/Documents/GitHub/elk-native/src-tauri/.cargo',
+    '-Clink-arg=-landroid',
+    '-Clink-arg=-llog',
+    '-Clink-arg=-lOpenSLES',
+]
