--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,8 +88,8 @@ jobs:
           APPLE_CERTIFICATE: '${{ secrets.APPLE_CERTIFICATE }}'
           APPLE_CERTIFICATE_PASSWORD: '${{ secrets.APPLE_CERTIFICATE_PASSWORD }}'
           APPLE_SIGNING_IDENTITY: '${{ secrets.APPLE_SIGNING_IDENTITY }}'
-          # TAURI_KEY_PASSWORD: '${{ secrets.TAURI_KEY_PASSWORD }}'
-          # TAURI_PRIVATE_KEY: '${{ secrets.TAURI_PRIVATE_KEY }}'
+          TAURI_KEY_PASSWORD: '${{ secrets.TAURI_KEY_PASSWORD }}'
+          TAURI_PRIVATE_KEY: '${{ secrets.TAURI_PRIVATE_KEY }}'
         with:
           target: ${{ matrix.config.rust_target }}
           # args: --verbose
