--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,12 +135,22 @@ jobs:
 
       - name: Rename .app artifacts
         run: |
-          mv "artifacts/x86_64/Elk.app.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_macos_x86_64.app.tar.gz"
-          mv "artifacts/aarch64/Elk.app.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_macos_aarch64.app.tar.gz"
+          mv "artifacts/x86_64/macos/Elk.app.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_macos_x86_64.app.tar.gz"
+          mv "artifacts/x86_64/macos/Elk.app.tar.gz.sig" "./artifacts/Elk_${{ github.ref_name }}_macos_x86_64.app.tar.gz.sig"
+          mv "artifacts/x86_64/dmg/Elk_0.0.0_x64.dmg" "./artifacts/Elk_${{ github.ref_name }}_macos_x86_64.dmg"
 
-          mv "artifacts/x86_64/Elk_0.1.0_x64_en-US.msi" "./artifacts/Elk_${{ github.ref_name }}_windows_x86_64.msi"
+          mv "artifacts/aarch64/macos/Elk.app.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_macos_aarch64.app.tar.gz"
+          mv "artifacts/aarch64/macos/Elk.app.tar.gz.sig" "./artifacts/Elk_${{ github.ref_name }}_macos_aarch64.app.tar.gz.sig"
+          mv "artifacts/aarch64/dmg/Elk_0.0.0_aarch64.dmg" "./artifacts/Elk_${{ github.ref_name }}_macos_aarch64.dmg"
+
+          mv "artifacts/x86_64/Elk_0.0.0_x64_en-US.msi" "./artifacts/Elk_${{ github.ref_name }}_windows_x86_64.msi"
+          mv "artifacts/x86_64/Elk_0.0.0_x64_en-US.msi.zip" "./artifacts/Elk_${{ github.ref_name }}_windows_x86_64.msi.zip"
+          mv "artifacts/x86_64/Elk_0.0.0_x64_en-US.msi.zip.sig" "./artifacts/Elk_${{ github.ref_name }}_windows_x86_64.msi.zip.sig"
           
-          mv "artifacts/x86_64/elk_0.1.0_amd64.AppImage" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.AppImage"
+          mv "artifacts/x86_64/appimage/elk_0.0.0_amd64.AppImage" "./artifacts/Elk_v0.0.0_linux_x86_64.AppImage"
+          mv "artifacts/x86_64/appimage/elk_0.0.0_amd64.AppImage.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.AppImage.tar.gz"
+          mv "artifacts/x86_64/appimage/elk_0.0.0_amd64.AppImage.tar.gz.sig" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.AppImage.tar.gz.sig"
+          mv "artifacts/x86_64/deb/elk_0.0.0_amd64.deb" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.deb"
                 
       - name: "create release"
         uses: softprops/action-gh-release@master
