--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -158,7 +158,7 @@ jobs:
           mv "artifacts/x86_64/appimage/elk_0.0.0_amd64.AppImage.tar.gz" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.AppImage.tar.gz"
           mv "artifacts/x86_64/appimage/elk_0.0.0_amd64.AppImage.tar.gz.sig" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.AppImage.tar.gz.sig"
           mv "artifacts/x86_64/deb/elk_0.0.0_amd64.deb" "./artifacts/Elk_${{ github.ref_name }}_linux_x86_64.deb"
-          
+
       - name: "create release"
         uses: softprops/action-gh-release@master
         env:
@@ -176,6 +176,7 @@ jobs:
         run: |
           git config --global user.name "${{ github.event.pusher.name }}"
           git config --global user.email "${{ github.event.pusher.email }}"
+          git checkout main
           git add latest-stable.json
           git commit -am "Update latest.json"
           git push
