ci: fix publish ci

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -168,7 +168,6 @@ jobs:
         run: |
           git config --global user.name "${{ github.event.pusher.name }}"
           git config --global user.email "${{ github.event.pusher.email }}"
-          git checkout main
           git add latest-stable.json
           git commit -am "Update latest.json"
-          git push
+          git push origin HEAD:main
