--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "elk-native",
-  "version": "0.5.0-next.3",
+  "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
