--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # required for use of git history
-      
+
       - name: covector status
         uses: jbolda/covector/packages/action@covector-v0
         id: covector-status
@@ -144,6 +144,16 @@ jobs:
         with:
           name: artifacts-${{ matrix.config.arch }}
           path: "${{ join(fromJSON(steps.tauri_build.outputs.artifacts), '\n') }}"
+      - name: Rename elk binary to represent it's architecture and os
+        run: |
+          pwd
+          mkdir target/${{ matrix.config.rust_target }}/release/bundle/bin -p
+          cp ./target/${{ matrix.config.rust_target }}/release/elk ./target/${{ matrix.config.rust_target }}/release/bundle/bin/Elk_${{ needs.version-or-publish.outputs.version }}_${{ matrix.config.arch }}
+      # Upload binaries,
+      - uses: actions/upload-artifact@v3
+        with:
+          name: artifacts-${{ matrix.config.arch }}
+          path: "target/${{ matrix.config.rust_target }}/release/bundle/bin/Elk_${{ needs.version-or-publish.outputs.version }}_${{ matrix.config.arch }}"
 
   publish-to-github:
     needs: [version-or-publish, build-binaries]
@@ -198,7 +208,6 @@ jobs:
           mv "artifacts/x86_64/appimage/elk_${{ needs.version-or-publish.outputs.version }}_amd64.AppImage.tar.gz" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.AppImage.tar.gz"
           mv "artifacts/x86_64/appimage/elk_${{ needs.version-or-publish.outputs.version }}_amd64.AppImage.tar.gz.sig" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.AppImage.tar.gz.sig"
           mv "artifacts/x86_64/deb/elk_${{ needs.version-or-publish.outputs.version }}_amd64.deb" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.deb"
-      
       - name: Generate latest.json file
         run: node scripts/latest-json.mjs ${{ needs.version-or-publish.outputs.version }} stable
         env:
