--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2021"
 rust-version = "1.59"
 
 [build-dependencies]
-tauri-build = { version = "1.2.1", features = [ ] }
+tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
-serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.2.3", features = [ ] }
-tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev", features = [ "colored" ] }
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.2.3", features = ["updater"] }
+tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log", branch = "dev",  features = ["colored"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev" }
 log = "0.4.17"
 env_logger = "0.10.0"
