ci: run rename and upload bins only on ubuntu

--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -156,12 +156,14 @@ jobs:
           name: artifacts-${{ matrix.config.arch }}
           path: "${{ join(fromJSON(steps.tauri_build.outputs.artifacts), '\n') }}"
       - name: Rename elk binary to represent it's architecture and os
+        if: "matrix.config.os == 'ubuntu-latest'"
         run: |
           pwd
           mkdir target/${{ matrix.config.rust_target }}/release/bundle/bin -p
           cp ./target/${{ matrix.config.rust_target }}/release/elk ./target/${{ matrix.config.rust_target }}/release/bundle/bin/Elk_${{ needs.version-or-publish.outputs.version }}_${{ matrix.config.arch }}
       # Upload binaries,
       - uses: actions/upload-artifact@v3
+        if: "matrix.config.os == 'ubuntu-latest'"
         with:
           name: artifacts-${{ matrix.config.arch }}
           path: "target/${{ matrix.config.rust_target }}/release/bundle/bin/Elk_${{ needs.version-or-publish.outputs.version }}_${{ matrix.config.arch }}"
