--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -59,7 +59,7 @@ jobs:
           body: ${{ steps.covector-version.outputs.change }}
       
       - name: Echo release notes
-        run: echo ${{ fromJSON(steps.covector-status.outputs.templatePipe) }}
+        run: echo ${{ steps.covector-status.outputs.templatePipe }}
 
       - name: Write release notes
         if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
