--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -16,7 +16,6 @@ concurrency:
 jobs:
   version-or-publish:
     runs-on: ubuntu-latest
-    timeout-minutes: 65
     outputs:
       templatePipe: ${{ steps.covector-status.outputs.templatePipe }}
       willPublish: ${{ steps.covector-status.outputs.willPublish-elk-native }}
@@ -25,54 +24,31 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0 # required for use of git history
-      
-      - name: covector status
-        uses: jbolda/covector/packages/action@covector-v0
-        id: covector-status
-        with:
-          command: 'status'
-
+          fetch-depth: 0
       - name: git config
-        if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
         run: |
           git config --global user.name "${{ github.event.pusher.name }}"
           git config --global user.email "${{ github.event.pusher.email }}"
-
-      - name: covector version
+      - name: covector version-or-publish
         uses: jbolda/covector/packages/action@covector-v0
-        id: covector-version
-        if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
+        id: covector
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          command: 'version'
-
+          command: 'version-or-publish'
+          createRelease: true
+          draftRelease: true
+      - run: echo ${{ steps.covector.outputs.templatePipe }}
       - name: Create Pull Request With Versions Bumped
         id: cpr
-        uses: peter-evans/create-pull-request@v4
-        if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
+        uses: tauri-apps/create-pull-request@v3
+        if: steps.covector.outputs.commandRan == 'version'
         with:
-          title: 'Publish New Versions'
-          commit-message: 'publish new versions'
-          labels: 'version updates'
-          branch: 'release'
-          body: ${{ steps.covector-version.outputs.change }}
-      
-      - name: Echo release notes
-        run: echo ${{ steps.covector-status.outputs.templatePipe }}
+          title: "Publish New Versions"
+          labels: "version updates"
+          branch: "release"
+          body: ${{ steps.covector.outputs.change }}
 
-      - name: Write release notes
-        if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
-        run: echo "${{ steps.covector-version.outputs.change }}" > RELEASE_NOTES.txt
-
-      - name: Save Release Notes
-        if: ${{ steps.covector-status.outputs.status != 'No changes.' }}
-        uses: actions/cache/save@v3
-        with:
-          path: RELEASE_NOTES.txt
-          key: release-notes
-
-  build-binaries:
+  create-and-upload-assets:
     runs-on: ${{ matrix.config.os }}
     needs: [version-or-publish]
     if: needs.version-or-publish.outputs.willPublish
@@ -93,43 +69,37 @@ jobs:
           - os: windows-latest
             arch: x86_64
             rust_target: x86_64-pc-windows-msvc
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           submodules: true
-
       - name: "Setup Rust"
         uses: dtolnay/rust-toolchain@stable
         with:
             targets: ${{ matrix.config.rust_target }}
-
       - uses: Swatinem/rust-cache@v2
         with:
             key: ${{ matrix.config.rust_target }}
-
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
         with:
           version: 7
           run_install: false
-
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: pnpm
           cache-dependency-path: elk/pnpm-lock.yaml
-
       - name: Install dependencies
         run: cd elk && pnpm install --force
-
       - name: "Install native packages"
         if: "matrix.config.os == 'ubuntu-latest'"
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libayatana-appindicator3-dev librsvg2-dev patchelf
-
       - name: create apple private key file
         if: "matrix.config.os == 'macos-latest'"
         run: |
@@ -138,7 +108,6 @@ jobs:
         env:
           APPLE_API_PRIVKEY: '${{ secrets.APPLE_API_PRIVKEY }}'
           APPLE_API_KEY: '${{ secrets.APPLE_API_KEY }}'
-
       - uses: JonasKruckenberg/tauri-build@v1.2.2
         id: tauri_build
         env:
@@ -159,41 +128,42 @@ jobs:
           name: artifacts-${{ matrix.config.arch }}
           path: "${{ join(fromJSON(steps.tauri_build.outputs.artifacts), '\n') }}"
 
-  publish-to-github:
-    needs: [version-or-publish, build-binaries]
+  publish:
+    needs: [version-or-publish, create-and-upload-assets]
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    steps:
-      - uses: actions/checkout@v3
 
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # required for use of git history
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
         with:
           version: 7
           run_install: false
-
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: pnpm
-
       - name: Run pnpm install
         run: pnpm install
-
+      - name: git config
+        run: |
+          git config --global user.name "${{ github.event.pusher.name }}"
+          git config --global user.email "${{ github.event.pusher.email }}"
       - name: Download x86_64 artifacts
         uses: actions/download-artifact@v3
         with:
           name: artifacts-x86_64
           path: artifacts/x86_64
-
       - name: Download aarch64 artifacts
         uses: actions/download-artifact@v3
         with:
           name: artifacts-aarch64
           path: artifacts/aarch64
-
       - name: Rename artifacts
         run: |
           mv "artifacts/x86_64/macos/Elk.app.tar.gz" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_macos_x86_64.app.tar.gz"
@@ -212,16 +182,8 @@ jobs:
           mv "artifacts/x86_64/appimage/elk_${{ needs.version-or-publish.outputs.version }}_amd64.AppImage.tar.gz" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.AppImage.tar.gz"
           mv "artifacts/x86_64/appimage/elk_${{ needs.version-or-publish.outputs.version }}_amd64.AppImage.tar.gz.sig" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.AppImage.tar.gz.sig"
           mv "artifacts/x86_64/deb/elk_${{ needs.version-or-publish.outputs.version }}_amd64.deb" "./artifacts/Elk_${{ needs.version-or-publish.outputs.version }}_linux_x86_64.deb"
-      
-      - name: Restore Release Notes
-        id: cache-primes-restore
-        uses: actions/cache/restore@v3
-        with:
-          path: RELEASE_NOTES.txt
-          key: release-notes
-
       - name: Generate latest.json file
-        run: node scripts/latest-json.mjs ${{ needs.version-or-publish.outputs.version }} stable
+        run: node scripts/latest-json.mjs ${{ needs.version-or-publish.outputs.version }} nightly
         env:
           CHANGELOG: '${{ needs.version-or-publish.outputs.templatePipe }}'
 
@@ -232,13 +194,12 @@ jobs:
           git add latest-stable.json
           git commit -am "Update latest.json"
           git push origin HEAD:main
-
       - name: 'create release'
         uses: softprops/action-gh-release@master
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           tag_name: v${{ needs.version-or-publish.outputs.version }}
-          generate_release_notes: true
-          # body_path: RELEASE_NOTES.txt
+          draft: false
           files: ./artifacts/**/*
+      
