--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       changelog: ${{ fromJSON(steps.covector.outputs.templatePipe).elk-native.pipe.pkg.changelog }}
-      willPublish: ${{ steps.covector-status.outputs.willPublish-elk-native }}
+      published: ${{ steps.covector-status.outputs.published-elk-native }}
       version: ${{ steps.covector-status.outputs.version-elk-native }}
 
     steps:
@@ -51,7 +51,7 @@ jobs:
   create-and-upload-assets:
     runs-on: ${{ matrix.config.os }}
     needs: [version-or-publish]
-    if: needs.version-or-publish.outputs.willPublish
+    if: needs.version-or-publish.outputs.published
     timeout-minutes: 30
     strategy:
       fail-fast: false
@@ -185,7 +185,7 @@ jobs:
       - name: Generate latest.json file
         run: node scripts/latest-json.mjs ${{ needs.version-or-publish.outputs.version }} nightly
         env:
-          CHANGELOG: '${{ needs.version-or-publish.outputs.templatePipe }}'
+          CHANGELOG: '${{ needs.version-or-publish.outputs.changelog }}'
 
       - name: Commit latest.json
         run: |
